# GasPy

./: .gitignore  README.md  manage.py  pyproject.toml
anagrafic/: apps.py
anagrafic/models/: __init__.py  fornitore.py  gas.py  prodotto_tipo.py  sub_group.py  user_data.py
gaspy/: asgi.py  roles.py  settings.py  urls.py  wsgi.py
